--- a/Physics Baseball Game/Physics Baseball Game.csproj
+++ b/Physics Baseball Game/Physics Baseball Game.csproj
@@ -9,4 +9,10 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\" />
+    <Folder Include="ViewModels\" />
+    <Folder Include="Views\" />
+  </ItemGroup>
+
 </Project>
