Adjusted Player Profile

--- a/Physics Baseball Game/Physics Baseball Game.csproj
+++ b/Physics Baseball Game/Physics Baseball Game.csproj
@@ -4,6 +4,7 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net9.0-windows</TargetFramework>
     <RootNamespace>Physics_Baseball_Game</RootNamespace>
+    <AssemblyName>PhysicsBaseballGame</AssemblyName>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
